--- a/static/css/detail/teacher.css
+++ b/static/css/detail/teacher.css
@@ -5,10 +5,12 @@
   display: flex;
   width: 100%;
 }
+
 ._wrapper .info, ._wrapper ._list {
   padding: 10px;
   border-radius: 3px;
 }
+
 ._wrapper .info {
   margin-top: 30px;
   height: max-content;
@@ -17,9 +19,11 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px;
   font-weight: 500;
 }
+
 ._wrapper .info .float {
   float: right;
 }
+
 ._wrapper .info .float button {
   width: 40px;
   height: 40px;
@@ -29,18 +33,23 @@
   border: 1px solid #15a362;
   padding: 10px;
 }
+
 ._wrapper .info .center {
   text-align: center;
 }
+
 ._wrapper .info .profile-box {
   margin: 0 auto;
   transform: translateY(-50%);
   width: 150px;
   height: 150px;
-  background-color: rgb(157, 157, 157);
+  background-color: #9d9d9d;
 }
+
 ._wrapper ._list {
   width: 70%;
 }
+
+
 
 /*# sourceMappingURL=teacher.css.map */
