--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,9 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+{% load color %}
+
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Edu Ground</title>
 
@@ -13,21 +17,30 @@
 	<link rel="shortcut icon" href="{% static 'logo.png' %}">
 
 	<!-- FontAwesome JS-->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+	<script src="{% static 'js/jquery.min.js' %}"></script> -->
+
 	<link rel="stylesheet" href="{% static 'assets\plugins\fontawesome\css\all.min.css' %}">
 	<script defer src="{% static 'assets/plugins/fontawesome/js/all.min.js' %}"></script>
 	<script src="{% static 'js/jquery.min.js' %}"></script>
 
-
 	<!-- App CSS -->
 	<link id="theme-style" rel="stylesheet" href="{% static 'assets/css/portal.css' %}">
 
-	
-	<link  href="{% static 'css/modal.css' %}" rel="stylesheet" >
-	<link  href="{% static 'css/table.css' %}" rel="stylesheet" >
-	<link  href="{% static 'css/base.css' %}" rel="stylesheet" >
-	<link  href="{% static 'css/loader.css' %}" rel="stylesheet" >
 
+	<link href="{% static 'css/modal.css' %}" rel="stylesheet">
+	<link href="{% static 'css/table.css' %}" rel="stylesheet">
+	<link href="{% static 'css/loader.css' %}" rel="stylesheet">
+
+	{% with 'assets/css/portal.css'|color:ec as css_content %}
+		<link rel="stylesheet" type="text/css" href="data:text/css;charset=utf-8,{{ css_content|urlencode }}">
+	{% endwith %}
+
+
+	<link href="{% static 'css/base.css' %}" rel="stylesheet">
 	
+
 	{% block title %}
 	{% endblock title %}
 
@@ -40,24 +53,25 @@
 
 	{% block form %}
 	{% endblock form %}
-	
-	{% if page_name == "Talaba" %}
-		<div class="back d-none" data-modal-name="excel">
-			<div class="modal">
-				<div class="close" data-modal-id="excel">&times;</div>
-				<div class="h2 mb-3">Excel dan import qilish</div>
-				<div class="mb-3">Shablonni yuklash <a href="{% static 'template/peoples.xlsx' %}" download>file.xlsx</a></div>
-				<form method="post" enctype="multipart/form-data"> {% csrf_token %}
-					<div class="form-group gap-3">
-						<label for="file" class="h5 d-inline">Faylni tanlash</label>
-						<input type="file" name="file" class="mb-3" accept=".xlsx" id="file">
-					</div>
-					<input type="hidden" name="command" value="excel">
 
-					<button class="btn btn-primary text-white" type="submit">Qo'shish</button>
-				</form>
+	{% if page_name == "Talaba" %}
+	<div class="back d-none" data-modal-name="excel">
+		<div class="modal">
+			<div class="close" data-modal-id="excel">&times;</div>
+			<div class="h2 mb-3">Excel dan import qilish</div>
+			<div class="mb-3">Shablonni yuklash <a href="{% static 'template/peoples.xlsx' %}" download>file.xlsx</a>
 			</div>
+			<form method="post" enctype="multipart/form-data"> {% csrf_token %}
+				<div class="form-group gap-3">
+					<label for="file" class="h5 d-inline">Faylni tanlash</label>
+					<input type="file" name="file" class="mb-3" accept=".xlsx" id="file">
+				</div>
+				<input type="hidden" name="command" value="excel">
+
+				<button class="btn btn-primary text-white" type="submit">Qo'shish</button>
+			</form>
 		</div>
+	</div>
 	{% endif %}
 	<div class="loader-back d-none">
 		<div class="loader"></div>
@@ -89,17 +103,19 @@
 										class="fas fa-search"></i></button>
 
 
-								
+
 							</form>
 						</div>
 
 						<div class="app-utilities col-auto d-flex gap-3 align-items-center">
 							{% if page_name %}
-								{% if page_name == "Talaba" %}
-									<button class="btn xsbtn text-white open-modal" data-modal-id="excel">Excel dan yuklash</button>
-								{% endif %}
-								<button class="btn btn-primary text-white open-modal" data-modal-id="add-modal"> {{ page_name }} qo'shish</button>
-								{% endif %}
+							{% if page_name == "Talaba" %}
+							<button class="btn xsbtn text-white open-modal" data-modal-id="excel">Excel dan
+								yuklash</button>
+							{% endif %}
+							<button class="btn btn-primary text-white open-modal" data-modal-id="add-modal">
+								{{ page_name }} qo'shish</button>
+							{% endif %}
 							{% block save-button %}
 							{% endblock save-button %}
 							<a href="{% url 'logout' %}" role="button" aria-expanded="false">{{ user.username }}</a>
@@ -113,110 +129,57 @@
 			<div class="sidepanel-inner d-flex flex-column">
 				<a href="#" id="sidepanel-close" class="sidepanel-close d-xl-none">&times;</a>
 				<div class="app-branding">
-					<a class="app-logo" href="{% url 'home-page' %}"><img class="logo-icon me-2" src="{% static 'assets/images/app-logo.svg' %}	" alt="logo"><span class="logo-text">{{ec.name}}</span></a>
+					<a class="app-logo" href="{% url 'home-page' %}">
+						<img src="{{ ec.logo.url }}" alt="logo">
+						<span class="logo-text">{{ ec.name }}</span>
+					</a>
 				</div>
 
 				<nav id="app-nav-main" class="app-nav app-nav-main flex-grow-1">
 					<ul class="app-menu list-unstyled accordion" id="menu-accordion">
-						
+
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'lids' %}">
-								<span class="nav-icon">
-									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
-										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd"
-											d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-										<path
-											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-									</svg>
-								</span>
+								<i class="fa-solid fa-circle-question"></i>
 								<span class="nav-link-text">Lidlar</span>
 							</a>
 						</li>
-						
+
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'peoples' %}">
-								<span class="nav-icon">
-									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
-										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd"
-											d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-										<path
-											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-									</svg>
-								</span>
+								<i class="fa-solid fa-user-plus"></i>
 								<span class="nav-link-text">Talabalar</span>
 							</a>
 						</li>
 
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'teachers' %}">
-								<span class="nav-icon">
-									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
-										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd"
-											d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-										<path
-											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-									</svg>
-								</span>
+								<i class="fa-solid fa-chalkboard-user"></i>
 								<span class="nav-link-text">O'qituvchilar</span>
 							</a>
 						</li>
 
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'course' %}">
-								<span class="nav-icon">
-									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
-										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd"
-											d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-										<path
-											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-									</svg>
-								</span>
+								<i class="fa-solid fa-person-chalkboard"></i>
 								<span class="nav-link-text">Kurslar</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'group' %}">
-								<span class="nav-icon">
-									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
-										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd"
-											d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-										<path
-											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-									</svg>
-								</span>
+								<i class="fa-solid fa-people-group"></i>
 								<span class="nav-link-text">Guruhlar</span>
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{% url 'finance' %}">
-								<span class="nav-icon">
-									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
-										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd"
-											d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-										<path
-											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-									</svg>
-								</span>
+								<i class="fa-solid fa-dollar-sign"></i>
 								<span class="nav-link-text">Moliya</span>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% url 'finance' %}">
-								<span class="nav-icon">
-									<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle"
-										fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd"
-											d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-										<path
-											d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z" />
-									</svg>
-								</span>
+							<a class="nav-link" href="{% url 'exp' %}">
+								<i class="fa-solid fa-coins"></i>
 								<span class="nav-link-text">Chegirma</span>
 							</a>
 						</li>
@@ -227,18 +190,10 @@
 						<ul class="app-menu footer-menu list-unstyled">
 							<li class="nav-item">
 								<a class="nav-link" href="{% url 'settings' %}">
-									<span class="nav-icon">
-										<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-gear"
-											fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-											<path fill-rule="evenodd"
-												d="M8.837 1.626c-.246-.835-1.428-.835-1.674 0l-.094.319A1.873 1.873 0 0 1 4.377 3.06l-.292-.16c-.764-.415-1.6.42-1.184 1.185l.159.292a1.873 1.873 0 0 1-1.115 2.692l-.319.094c-.835.246-.835 1.428 0 1.674l.319.094a1.873 1.873 0 0 1 1.115 2.693l-.16.291c-.415.764.42 1.6 1.185 1.184l.292-.159a1.873 1.873 0 0 1 2.692 1.116l.094.318c.246.835 1.428.835 1.674 0l.094-.319a1.873 1.873 0 0 1 2.693-1.115l.291.16c.764.415 1.6-.42 1.184-1.185l-.159-.291a1.873 1.873 0 0 1 1.116-2.693l.318-.094c.835-.246.835-1.428 0-1.674l-.319-.094a1.873 1.873 0 0 1-1.115-2.692l.16-.292c.415-.764-.42-1.6-1.185-1.184l-.291.159A1.873 1.873 0 0 1 8.93 1.945l-.094-.319zm-2.633-.283c.527-1.79 3.065-1.79 3.592 0l.094.319a.873.873 0 0 0 1.255.52l.292-.16c1.64-.892 3.434.901 2.54 2.541l-.159.292a.873.873 0 0 0 .52 1.255l.319.094c1.79.527 1.79 3.065 0 3.592l-.319.094a.873.873 0 0 0-.52 1.255l.16.292c.893 1.64-.902 3.434-2.541 2.54l-.292-.159a.873.873 0 0 0-1.255.52l-.094.319c-.527 1.79-3.065 1.79-3.592 0l-.094-.319a.873.873 0 0 0-1.255-.52l-.292.16c-1.64.893-3.433-.902-2.54-2.541l.159-.292a.873.873 0 0 0-.52-1.255l-.319-.094c-1.79-.527-1.79-3.065 0-3.592l.319-.094a.873.873 0 0 0 .52-1.255l-.16-.292c-.892-1.64.902-3.433 2.541-2.54l.292.159a.873.873 0 0 0 1.255-.52l.094-.319z" />
-											<path fill-rule="evenodd"
-												d="M8 5.754a2.246 2.246 0 1 0 0 4.492 2.246 2.246 0 0 0 0-4.492zM4.754 8a3.246 3.246 0 1 1 6.492 0 3.246 3.246 0 0 1-6.492 0z" />
-										</svg>
-									</span>
+									<i class="fa-solid fa-gear"></i>
 									<span class="nav-link-text">Sozlamalar</span>
 								</a>
-							</li>					
+							</li>
 						</ul>
 					</nav>
 				</div>
@@ -260,7 +215,7 @@
 	<script src="{% static 'js/loader.js' %}"></script>
 	{% block script %}
 	{% endblock script %}
-	
+
 
 </body>
 
