--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,6 +43,9 @@
   -ms-user-select: none;
   user-select: none;
 }
+* input {
+  user-select: auto;
+}
 
 .active .nav-link-text,
 .active .nav-icon {
@@ -59,17 +62,102 @@
   height: 20px;
   border-radius: 50%;
 }
-
 .xs.c {
   background-color: crimson;
 }
-
 .xs.g {
   background-color: #12ff2e;
 }
 
 .xsbtn {
   background-color: dodgerblue !important;
+}
+
+a.nav-link {
+  padding-left: 20px !important;
+}
+a.nav-link svg {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 20px;
+  min-width: 40px;
+}
+a.nav-link span.nav-link-text {
+  margin: 0;
+}
+
+.charts {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.charts .chart {
+  width: 48% !important;
+  height: 550px !important;
+}
+.charts .pie-chart {
+  width: min-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.charts .pie-chart .info {
+  display: flex;
+  font-size: 14px;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+.charts .pie-chart .info .box1,
+.charts .pie-chart .info .box2 {
+  display: inline-block;
+  width: 25px;
+  height: 15px;
+  background-color: dodgerblue;
+}
+.charts .pie-chart .info .box2 {
+  background-color: brown;
+}
+.charts .pie-chart .pie-chart__item {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+}
+
+.wrapper.settings {
+  display: flex;
+  justify-content: center;
+}
+.wrapper.settings .form-group {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.wrapper.settings .rounded-image {
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
+.wrapper.settings .rounded-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.3s ease-in-out;
+}
+.wrapper.settings .rounded-image img:hover {
+  transform: scale(1.1);
+}
+
+.app-sidepanel .app-branding {
+  height: auto;
+}
+.app-sidepanel .app-branding .app-logo img {
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  transition: 0.3s ease-in-out;
 }
 
 /*# sourceMappingURL=base.css.map */
