--- a/templates/tabs/finance.html
+++ b/templates/tabs/finance.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<span class="h1">Cheklar</span><span class="m-3">Miqdori - {{ payment_logs.count }}</span>
+<span class="h1">Cheklar</span><span class="m-3">Miqdori - {{ payment_logs.count }}</span><span class="h2">Hozirgi balans - {{ ec.balans }} so'm</span>
 <ul class="list-fluid mt-3">
     <li class="special xcol-6">
         <span class="h5">
